fix code unreverted